@@ -1,6 +1,6 @@
 /* valaliteral.vala
  *
- * Copyright (C) 2006  Jürg Billeter
+ * Copyright (C) 2006-2007  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -30,6 +30,4 @@ public abstract class Vala.Literal : CodeNode {
 	 * Specifies the type of this literal.
 	 */
 	public TypeReference static_type { get; set; }
-	
-	public abstract ref string! to_string ();
 }
